--- a/views/carrito.ejs
+++ b/views/carrito.ejs
@@ -39,7 +39,7 @@
     <h3 style="text-align:center;">Total: $<%= total.toFixed(2) %></h3>
   <% } %>
 
-  <div style="text-align: center; margin-top: 20px;">
+  <div class="botones-navegacion">
     <a href="/productos" class="boton">Seguir comprando</a>
     <a href="/checkout" class="boton">Finalizar compra</a>
   </div>
